[BUGFIX] Gap between module menu items causes collapse on click
This Fix transforms margins into paddings to avoid clicks through the
items auf the module menu.
This way the collapsing is not possible anymore in the gap.

Added Spaces to be CGL conform.

Resolves: #27634
Releases: 4.6, 4.5

--- a/typo3/sysext/t3skin/stylesheets/structure/module_menu.css
+++ b/typo3/sysext/t3skin/stylesheets/structure/module_menu.css
@@ -18,11 +18,14 @@ Module menu
 
 #typo3-menu li {
 	clear: both;
-	margin-bottom: 1px;
+	padding-bottom: 1px;
+	margin-bottom: 0px;
 }
 
 #typo3-menu li a {
 	display: block;
+	padding-bottom: 1px;
+	margin-bottom: 0px;
 }
 
 #typo3-menu li img {
